--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocBooleanValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocBooleanValue.css
@@ -60,6 +60,8 @@
 
 .bocBooleanValue:not(.readOnly, .disabled):focus-within
 {
+  outline: var(--remotion-themed-outline-focus);
+  outline-offset: var(--remotion-themed-outline-offset-focus);
   background-color: var(--remotion-themed-background-color-focus);
   border: var(--remotion-themed-border-focus);
   box-shadow: var(--remotion-themed-box-shadow-focus);
@@ -67,6 +69,8 @@
 
 .bocBooleanValue.readOnly:focus-within
 {
+  outline: var(--remotion-themed-outline-readonly-focus);
+  outline-offset: var(--remotion-themed-outline-offset-readonly-focus);
   border: var(--remotion-themed-border-readonly-focus);
   background-color: var(--remotion-themed-background-color-readonly-focus);
   box-shadow: var(--remotion-themed-box-shadow-readonly-focus);
