--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/ListMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/ListMenu.css
@@ -72,7 +72,8 @@ span.listMenuItem a:hover
 
 span.listMenuItem a:focus
 {
-  outline: none;
+  outline: var(--remotion-themed-outline-focus);
+  outline-offset: var(--remotion-themed-outline-offset-focus);
   background-color: var(--remotion-themed-background-color-focus);
   border: var(--remotion-themed-border-focus);
   box-shadow: var(--remotion-themed-box-shadow-focus);
@@ -80,6 +81,8 @@ span.listMenuItem a:focus
 
 span.listMenuItem a:focus:hover
 {
+  outline: var(--remotion-themed-outline-focus-hover);
+  outline-offset: var(--remotion-themed-outline-offset-focus-hover);
   background-color: var(--remotion-themed-background-color-focus-hover);
   border: var(--remotion-themed-border-focus-hover);
   box-shadow: var(--remotion-themed-box-shadow-focus-hover);
