--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/TreeView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/TreeView.css
@@ -75,6 +75,8 @@ ul.treeViewRoot li > span.treeViewNode:hover
 
 ul.treeViewRoot li:focus > span.treeViewNode
 {
+  outline: var(--remotion-themed-outline-focus);
+  outline-offset: var(--remotion-themed-outline-offset-focus);
   background-color: var(--remotion-themed-background-color-focus);
   border: var(--remotion-themed-border-focus);
   box-shadow: var(--remotion-themed-box-shadow-focus);
@@ -82,6 +84,8 @@ ul.treeViewRoot li:focus > span.treeViewNode
 
 ul.treeViewRoot li:focus > span.treeViewNode:hover
 {
+  outline: var(--remotion-themed-outline-focus-hover);
+  outline-offset: var(--remotion-themed-outline-offset-focus-hover);
   background-color: var(--remotion-themed-background-color-focus-hover);
   border: var(--remotion-themed-border-focus-hover);
   box-shadow: var(--remotion-themed-box-shadow-focus-hover);
@@ -89,6 +93,8 @@ ul.treeViewRoot li:focus > span.treeViewNode:hover
 
 ul.treeViewRoot li[aria-selected=true]:focus > span.treeViewNode
 {
+  outline: var(--remotion-themed-outline-focus);
+  outline-offset: var(--remotion-themed-outline-offset-focus);
   background-color: var(--color-highlight);
   border: var(--remotion-themed-border-focus);
   box-shadow: var(--remotion-themed-box-shadow-focus);
@@ -96,6 +102,8 @@ ul.treeViewRoot li[aria-selected=true]:focus > span.treeViewNode
 
 ul.treeViewRoot li[aria-selected=true]:focus > span.treeViewNode:hover
 {
+  outline: var(--remotion-themed-outline-focus-hover);
+  outline-offset: var(--remotion-themed-outline-offset-focus-hover);
   background-color: var(--color-highlight);
   border: var(--remotion-themed-border-focus-hover);
   box-shadow: var(--remotion-themed-box-shadow-focus-hover);
