RM-9177 NovaGray: overflow clip in TabbedMultiViewActiveView changed to overflow hidden

--- a/Remotion/Web/Core/Res/Themes/NovaGray/HTML/TabbedMultiView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaGray/HTML/TabbedMultiView.css
@@ -32,7 +32,7 @@ div.tabbedMultiViewActiveView
   grid-area: view;
   display: flex;
   flex-direction: column;
-  overflow: clip;
+  overflow: hidden;
 }
 
 div.tabbedMultiViewActiveView > div.contentBorder
