RM-9414 Fix color of webbutton text

--- a/Remotion/Web/Core/Res/Themes/NovaGray/HTML/WebButton.css
+++ b/Remotion/Web/Core/Res/Themes/NovaGray/HTML/WebButton.css
@@ -14,6 +14,7 @@ button.webButton
   -moz-padding-start: 0;
   -moz-padding-end: 0;
   outline: none;
+  color: black;
 }
 
 button.webButton::-moz-focus-inner
