--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/FormGrid.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/FormGrid.css
@@ -8,6 +8,8 @@
 {
   border-collapse: collapse;
   width: 100%;
+  color: var(--color-standard-text);
+  background-color: var(--remotion-themed-background-color-page);
 }
 
 .formGridTitleCell,
