--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/TabbedMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/TabbedMenu.css
@@ -14,6 +14,8 @@ table.tabbedMenu
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
+  color: var(--color-standard-text);
+  background-color: var(--remotion-themed-background-color-page);
 }
 
 table.tabbedMenu tr
