--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
@@ -2,6 +2,8 @@
 
 div.bocList
 {
+  color: black;
+  background-color: white;
   display: block;
   position: relative;
   zoom: 1;
@@ -254,6 +256,7 @@ div.bocListTableScrollContainer
   height: auto;
   overflow-x: auto;
   overflow-y: hidden;
+  color: black;
   background-color: White;
 }
 
